[workspace]

[package]
name = "encfs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
arbitrary = { version = "1", features = ["derive"] }

[dependencies.encfs]
path = ".."

[dependencies.fuse_mt]
version = "0.6.3"

[[bin]]
name = "fuzz_file_ops"
path = "fuzz_targets/fuzz_file_ops.rs"
test = false
doc = false
bench = false
